--- a/Desenvolvimento/spb_web/WebContent/WEB-INF/web.xml
+++ b/Desenvolvimento/spb_web/WebContent/WEB-INF/web.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="ASCII"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
+ <welcome-file-list>
+ <welcome-file>index.jsf</welcome-file>
+ 
+ </welcome-file-list>
   <display-name>spb_web</display-name>
+ 
+
   <servlet>
     <servlet-name>Faces Servlet</servlet-name>
     <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -8,6 +14,10 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>Faces Servlet</servlet-name>
-    <url-pattern>/faces/*</url-pattern>
+    <url-pattern>*.jsf</url-pattern>
   </servlet-mapping>
+  
+  <session-config>
+  <session-timeout>30</session-timeout>
+  </session-config>
 </web-app>
