--- a/Desenvolvimento/spb_web/WebContent/WEB-INF/web.xml
+++ b/Desenvolvimento/spb_web/WebContent/WEB-INF/web.xml
@@ -20,4 +20,10 @@
   <session-config>
   <session-timeout>30</session-timeout>
   </session-config>
+  
+  <context-param>    
+     <param-name>primefaces.THEME</param-name>    
+     <param-value>redmond</param-value>    
+</context-param>  
+  
 </web-app>
